--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,6 +11,9 @@
 
 <body>
   <div class="container">
+    <div class="autentificare">
+      <button type="button">Autentificare</button>
+    </div>
     <div class="header">
 
       <header>
