--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,7 +2,7 @@
 <html lang="ro">
 
 <head>
-  <title>Proiect2</title>
+  <title>MaykeupShop</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" type="text/css" href="css/stil.css">
   <link rel="stylesheet" type="text/css" href="css/slideshow.css">
@@ -12,7 +12,13 @@
 <body>
   <div class="container">
     <div class="autentificare">
-      <button type="button">Autentificare</button>
+      <a href=/autentificare>
+      <button type="button" id ="butonAutentificare">Autentificare</button>
+      </a>
+      
+      <!-- <a href=/delogare>
+        <button type="button" id ="butonDelogare">Delogare</button>
+        </a> -->
     </div>
     <div class="header">
 
@@ -26,6 +32,8 @@
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <a href="/chestionar"
             class="nav-bar-text">Chestionar</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="/profil"
+            class="nav-bar-text">Profil</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <a href="/vizualizare-cos" class="nav-bar-text">Vizualizare cos</a>
 
         </nav>
@@ -40,34 +48,44 @@
           <!-- Full-width images with number text -->
           <div class="mySlides">
             <div class="numbertext">1 / 6</div>
-            <a href="/benefit">
-              <img src="Imagini/cosmetics1.png" style="width:700px; height:500px">
+            <a href="/benefitProducts">
+              <img src="Imagini/cosmetics1.png" style="width:600px; height:400px">
             </a>
           </div>
 
           <div class="mySlides">
             <div class="numbertext">2 / 6</div>
-            <img src="Imagini/cosmetics2.jpg" style="width:700px; height:500px">
+            <a href="/elfProducts">
+            <img src="Imagini/cosmetics2.jpg" style="width:600px; height:400px">
+            </a>
           </div>
 
           <div class="mySlides">
             <div class="numbertext">3 / 6</div>
-            <img src="Imagini/cosmetics3.jpg" style="width:700px; height:500px">
+            <a href="/lorealProducts">
+            <img src="Imagini/cosmetics3.jpg" style="width:600px; height:400px">
+          </a>
           </div>
 
           <div class="mySlides">
             <div class="numbertext">4 / 6</div>
-            <img src="Imagini/cosmetics4.jpg" style="width:700px; height:500px">
+            <a href="/maybellineProducts">
+            <img src="Imagini/cosmetics4.jpg" style="width:600px; height:400px">
+            </a>
           </div>
 
           <div class="mySlides">
             <div class="numbertext">5 / 6</div>
-            <img src="Imagini/cosmetics5.jpg" style="width:700px; height:500px">
+            <a href="/nyxProducts">
+            <img src="Imagini/cosmetics5.jpg" style="width:600px; height:400px">
+            </a>
           </div>
 
           <div class="mySlides">
             <div class="numbertext">6 / 6</div>
-            <img src="Imagini/cosmetics6.jpg" style="width:700px; height:500px">
+            <a href="/kylieProducts">
+            <img src="Imagini/cosmetics6.jpg" style="width:600px; height:400px">
+            </a>
           </div>
 
           <!-- Next and previous buttons -->
